parte3/sintatico.output
Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM

    3 cabecalho: T_PROGRAMA T_IDENTIF

    4 variaveis: %empty
    5          | declaracao_variaveis

    6 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    7                     | tipo lista_variaveis

    8 tipo: T_LOGICO
    9     | T_INTEIRO

   10 lista_variaveis: T_IDENTIF lista_variaveis
   11                | T_IDENTIF

   12 lista_comandos: %empty
   13               | comando lista_comandos

   14 comando: entrada_saida
   15        | repeticao
   16        | selecao
   17        | atribuicao

   18 entrada_saida: leitura
   19              | escrita

   20 leitura: T_LEIA T_IDENTIF

   21 escrita: T_ESCREVA expressao

   22 $@2: %empty

   23 $@3: %empty

   24 repeticao: T_ENQTO $@2 expressao T_FACA $@3 lista_comandos T_FIMENQTO

   25 $@4: %empty

   26 $@5: %empty

   27 selecao: T_SE expressao T_ENTAO $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE

   28 atribuicao: T_IDENTIF T_ATRIBUI expressao

   29 expressao: expressao T_VEZES expressao
   30          | expressao T_DIV expressao
   31          | expressao T_MAIS expressao
   32          | expressao T_MENOS expressao
   33          | expressao T_MAIOR expressao
   34          | expressao T_MENOR expressao
   35          | expressao T_IGUAL expressao
   36          | expressao T_E expressao
   37          | expressao T_OU expressao
   38          | termo

   39 termo: T_IDENTIF
   40      | T_NUMERO
   41      | T_V
   42      | T_F
   43      | T_NAO termo
   44      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 3
    T_INICIO (259) 2
    T_FIM (260) 2
    T_LEIA (261) 20
    T_ESCREVA (262) 21
    T_SE (263) 27
    T_ENTAO (264) 27
    T_SENAO (265) 27
    T_FIMSE (266) 27
    T_ENQTO (267) 24
    T_FACA (268) 24
    T_FIMENQTO (269) 24
    T_INTEIRO (270) 9
    T_LOGICO (271) 8
    T_MAIS (272) 31
    T_MENOS (273) 32
    T_VEZES (274) 29
    T_DIV (275) 30
    T_ATRIBUI (276) 28
    T_MAIOR (277) 33
    T_MENOR (278) 34
    T_IGUAL (279) 35
    T_E (280) 36
    T_OU (281) 37
    T_NAO (282) 43
    T_ABRE (283) 44
    T_FECHA (284) 44
    T_V (285) 41
    T_F (286) 42
    T_IDENTIF (287) 3 10 11 20 28 39
    T_NUMERO (288) 40


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    programa (35)
        on left: 2
        on right: 0
    $@1 (36)
        on left: 1
        on right: 2
    cabecalho (37)
        on left: 3
        on right: 2
    variaveis (38)
        on left: 4 5
        on right: 2
    declaracao_variaveis (39)
        on left: 6 7
        on right: 5 6
    tipo (40)
        on left: 8 9
        on right: 6 7
    lista_variaveis (41)
        on left: 10 11
        on right: 6 7 10
    lista_comandos (42)
        on left: 12 13
        on right: 2 13 24 27
    comando (43)
        on left: 14 15 16 17
        on right: 13
    entrada_saida (44)
        on left: 18 19
        on right: 14
    leitura (45)
        on left: 20
        on right: 18
    escrita (46)
        on left: 21
        on right: 19
    repeticao (47)
        on left: 24
        on right: 15
    $@2 (48)
        on left: 22
        on right: 24
    $@3 (49)
        on left: 23
        on right: 24
    selecao (50)
        on left: 27
        on right: 16
    $@4 (51)
        on left: 25
        on right: 27
    $@5 (52)
        on left: 26
        on right: 27
    atribuicao (53)
        on left: 28
        on right: 17
    expressao (54)
        on left: 29 30 31 32 33 34 35 36 37 38
        on right: 21 24 27 28 29 30 31 32 33 34 35 36 37 44
    termo (55)
        on left: 39 40 41 42 43 44
        on right: 38 43


State 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    3 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    2 programa: cabecalho . variaveis $@1 T_INICIO lista_comandos T_FIM

    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7

    $default  reduce using rule 4 (variaveis)

    variaveis             go to state 8
    declaracao_variaveis  go to state 9
    tipo                  go to state 10


State 4

    3 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 3 (cabecalho)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    9 tipo: T_INTEIRO .

    $default  reduce using rule 9 (tipo)


State 7

    8 tipo: T_LOGICO .

    $default  reduce using rule 8 (tipo)


State 8

    2 programa: cabecalho variaveis . $@1 T_INICIO lista_comandos T_FIM

    $default  reduce using rule 1 ($@1)

    $@1  go to state 11


State 9

    5 variaveis: declaracao_variaveis .

    $default  reduce using rule 5 (variaveis)


State 10

    6 declaracao_variaveis: tipo . lista_variaveis declaracao_variaveis
    7                     | tipo . lista_variaveis

    T_IDENTIF  shift, and go to state 12

    lista_variaveis  go to state 13


State 11

    2 programa: cabecalho variaveis $@1 . T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 14


State 12

   10 lista_variaveis: T_IDENTIF . lista_variaveis
   11                | T_IDENTIF .

    T_IDENTIF  shift, and go to state 12

    $default  reduce using rule 11 (lista_variaveis)

    lista_variaveis  go to state 15


State 13

    6 declaracao_variaveis: tipo lista_variaveis . declaracao_variaveis
    7                     | tipo lista_variaveis .

    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7

    $default  reduce using rule 7 (declaracao_variaveis)

    declaracao_variaveis  go to state 16
    tipo                  go to state 10


State 14

    2 programa: cabecalho variaveis $@1 T_INICIO . lista_comandos T_FIM

    T_LEIA     shift, and go to state 17
    T_ESCREVA  shift, and go to state 18
    T_SE       shift, and go to state 19
    T_ENQTO    shift, and go to state 20
    T_IDENTIF  shift, and go to state 21

    $default  reduce using rule 12 (lista_comandos)

    lista_comandos  go to state 22
    comando         go to state 23
    entrada_saida   go to state 24
    leitura         go to state 25
    escrita         go to state 26
    repeticao       go to state 27
    selecao         go to state 28
    atribuicao      go to state 29


State 15

   10 lista_variaveis: T_IDENTIF lista_variaveis .

    $default  reduce using rule 10 (lista_variaveis)


State 16

    6 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis .

    $default  reduce using rule 6 (declaracao_variaveis)


State 17

   20 leitura: T_LEIA . T_IDENTIF

    T_IDENTIF  shift, and go to state 30


State 18

   21 escrita: T_ESCREVA . expressao

    T_NAO      shift, and go to state 31
    T_ABRE     shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expressao  go to state 37
    termo      go to state 38


State 19

   27 selecao: T_SE . expressao T_ENTAO $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE

    T_NAO      shift, and go to state 31
    T_ABRE     shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expressao  go to state 39
    termo      go to state 38


State 20

   24 repeticao: T_ENQTO . $@2 expressao T_FACA $@3 lista_comandos T_FIMENQTO

    $default  reduce using rule 22 ($@2)

    $@2  go to state 40


State 21

   28 atribuicao: T_IDENTIF . T_ATRIBUI expressao

    T_ATRIBUI  shift, and go to state 41


State 22

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos . T_FIM

    T_FIM  shift, and go to state 42


State 23

   13 lista_comandos: comando . lista_comandos

    T_LEIA     shift, and go to state 17
    T_ESCREVA  shift, and go to state 18
    T_SE       shift, and go to state 19
    T_ENQTO    shift, and go to state 20
    T_IDENTIF  shift, and go to state 21

    $default  reduce using rule 12 (lista_comandos)

    lista_comandos  go to state 43
    comando         go to state 23
    entrada_saida   go to state 24
    leitura         go to state 25
    escrita         go to state 26
    repeticao       go to state 27
    selecao         go to state 28
    atribuicao      go to state 29


State 24

   14 comando: entrada_saida .

    $default  reduce using rule 14 (comando)


State 25

   18 entrada_saida: leitura .

    $default  reduce using rule 18 (entrada_saida)


State 26

   19 entrada_saida: escrita .

    $default  reduce using rule 19 (entrada_saida)


State 27

   15 comando: repeticao .

    $default  reduce using rule 15 (comando)


State 28

   16 comando: selecao .

    $default  reduce using rule 16 (comando)


State 29

   17 comando: atribuicao .

    $default  reduce using rule 17 (comando)


State 30

   20 leitura: T_LEIA T_IDENTIF .

    $default  reduce using rule 20 (leitura)


State 31

   43 termo: T_NAO . termo

    T_NAO      shift, and go to state 31
    T_ABRE     shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    termo  go to state 44


State 32

   44 termo: T_ABRE . expressao T_FECHA

    T_NAO      shift, and go to state 31
    T_ABRE     shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expressao  go to state 45
    termo      go to state 38


State 33

   41 termo: T_V .

    $default  reduce using rule 41 (termo)


State 34

   42 termo: T_F .

    $default  reduce using rule 42 (termo)


State 35

   39 termo: T_IDENTIF .

    $default  reduce using rule 39 (termo)


State 36

   40 termo: T_NUMERO .

    $default  reduce using rule 40 (termo)


State 37

   21 escrita: T_ESCREVA expressao .
   29 expressao: expressao . T_VEZES expressao
   30          | expressao . T_DIV expressao
   31          | expressao . T_MAIS expressao
   32          | expressao . T_MENOS expressao
   33          | expressao . T_MAIOR expressao
   34          | expressao . T_MENOR expressao
   35          | expressao . T_IGUAL expressao
   36          | expressao . T_E expressao
   37          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 46
    T_MENOS  shift, and go to state 47
    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52
    T_E      shift, and go to state 53
    T_OU     shift, and go to state 54

    $default  reduce using rule 21 (escrita)


State 38

   38 expressao: termo .

    $default  reduce using rule 38 (expressao)


State 39

   27 selecao: T_SE expressao . T_ENTAO $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE
   29 expressao: expressao . T_VEZES expressao
   30          | expressao . T_DIV expressao
   31          | expressao . T_MAIS expressao
   32          | expressao . T_MENOS expressao
   33          | expressao . T_MAIOR expressao
   34          | expressao . T_MENOR expressao
   35          | expressao . T_IGUAL expressao
   36          | expressao . T_E expressao
   37          | expressao . T_OU expressao

    T_ENTAO  shift, and go to state 55
    T_MAIS   shift, and go to state 46
    T_MENOS  shift, and go to state 47
    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52
    T_E      shift, and go to state 53
    T_OU     shift, and go to state 54


State 40

   24 repeticao: T_ENQTO $@2 . expressao T_FACA $@3 lista_comandos T_FIMENQTO

    T_NAO      shift, and go to state 31
    T_ABRE     shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expressao  go to state 56
    termo      go to state 38


State 41

   28 atribuicao: T_IDENTIF T_ATRIBUI . expressao

    T_NAO      shift, and go to state 31
    T_ABRE     shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expressao  go to state 57
    termo      go to state 38


State 42

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM .

    $default  reduce using rule 2 (programa)


State 43

   13 lista_comandos: comando lista_comandos .

    $default  reduce using rule 13 (lista_comandos)


State 44

   43 termo: T_NAO termo .

    $default  reduce using rule 43 (termo)


State 45

   29 expressao: expressao . T_VEZES expressao
   30          | expressao . T_DIV expressao
   31          | expressao . T_MAIS expressao
   32          | expressao . T_MENOS expressao
   33          | expressao . T_MAIOR expressao
   34          | expressao . T_MENOR expressao
   35          | expressao . T_IGUAL expressao
   36          | expressao . T_E expressao
   37          | expressao . T_OU expressao
   44 termo: T_ABRE expressao . T_FECHA

    T_MAIS   shift, and go to state 46
    T_MENOS  shift, and go to state 47
    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52
    T_E      shift, and go to state 53
    T_OU     shift, and go to state 54
    T_FECHA  shift, and go to state 58


State 46

   31 expressao: expressao T_MAIS . expressao

    T_NAO      shift, and go to state 31
    T_ABRE     shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expressao  go to state 59
    termo      go to state 38


State 47

   32 expressao: expressao T_MENOS . expressao

    T_NAO      shift, and go to state 31
    T_ABRE     shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expressao  go to state 60
    termo      go to state 38


State 48

   29 expressao: expressao T_VEZES . expressao

    T_NAO      shift, and go to state 31
    T_ABRE     shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expressao  go to state 61
    termo      go to state 38


State 49

   30 expressao: expressao T_DIV . expressao

    T_NAO      shift, and go to state 31
    T_ABRE     shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expressao  go to state 62
    termo      go to state 38


State 50

   33 expressao: expressao T_MAIOR . expressao

    T_NAO      shift, and go to state 31
    T_ABRE     shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expressao  go to state 63
    termo      go to state 38


State 51

   34 expressao: expressao T_MENOR . expressao

    T_NAO      shift, and go to state 31
    T_ABRE     shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expressao  go to state 64
    termo      go to state 38


State 52

   35 expressao: expressao T_IGUAL . expressao

    T_NAO      shift, and go to state 31
    T_ABRE     shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expressao  go to state 65
    termo      go to state 38


State 53

   36 expressao: expressao T_E . expressao

    T_NAO      shift, and go to state 31
    T_ABRE     shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expressao  go to state 66
    termo      go to state 38


State 54

   37 expressao: expressao T_OU . expressao

    T_NAO      shift, and go to state 31
    T_ABRE     shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expressao  go to state 67
    termo      go to state 38


State 55

   27 selecao: T_SE expressao T_ENTAO . $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE

    $default  reduce using rule 25 ($@4)

    $@4  go to state 68


State 56

   24 repeticao: T_ENQTO $@2 expressao . T_FACA $@3 lista_comandos T_FIMENQTO
   29 expressao: expressao . T_VEZES expressao
   30          | expressao . T_DIV expressao
   31          | expressao . T_MAIS expressao
   32          | expressao . T_MENOS expressao
   33          | expressao . T_MAIOR expressao
   34          | expressao . T_MENOR expressao
   35          | expressao . T_IGUAL expressao
   36          | expressao . T_E expressao
   37          | expressao . T_OU expressao

    T_FACA   shift, and go to state 69
    T_MAIS   shift, and go to state 46
    T_MENOS  shift, and go to state 47
    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52
    T_E      shift, and go to state 53
    T_OU     shift, and go to state 54


State 57

   28 atribuicao: T_IDENTIF T_ATRIBUI expressao .
   29 expressao: expressao . T_VEZES expressao
   30          | expressao . T_DIV expressao
   31          | expressao . T_MAIS expressao
   32          | expressao . T_MENOS expressao
   33          | expressao . T_MAIOR expressao
   34          | expressao . T_MENOR expressao
   35          | expressao . T_IGUAL expressao
   36          | expressao . T_E expressao
   37          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 46
    T_MENOS  shift, and go to state 47
    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52
    T_E      shift, and go to state 53
    T_OU     shift, and go to state 54

    $default  reduce using rule 28 (atribuicao)


State 58

   44 termo: T_ABRE expressao T_FECHA .

    $default  reduce using rule 44 (termo)


State 59

   29 expressao: expressao . T_VEZES expressao
   30          | expressao . T_DIV expressao
   31          | expressao . T_MAIS expressao
   31          | expressao T_MAIS expressao .
   32          | expressao . T_MENOS expressao
   33          | expressao . T_MAIOR expressao
   34          | expressao . T_MENOR expressao
   35          | expressao . T_IGUAL expressao
   36          | expressao . T_E expressao
   37          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49

    $default  reduce using rule 31 (expressao)


State 60

   29 expressao: expressao . T_VEZES expressao
   30          | expressao . T_DIV expressao
   31          | expressao . T_MAIS expressao
   32          | expressao . T_MENOS expressao
   32          | expressao T_MENOS expressao .
   33          | expressao . T_MAIOR expressao
   34          | expressao . T_MENOR expressao
   35          | expressao . T_IGUAL expressao
   36          | expressao . T_E expressao
   37          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49

    $default  reduce using rule 32 (expressao)


State 61

   29 expressao: expressao . T_VEZES expressao
   29          | expressao T_VEZES expressao .
   30          | expressao . T_DIV expressao
   31          | expressao . T_MAIS expressao
   32          | expressao . T_MENOS expressao
   33          | expressao . T_MAIOR expressao
   34          | expressao . T_MENOR expressao
   35          | expressao . T_IGUAL expressao
   36          | expressao . T_E expressao
   37          | expressao . T_OU expressao

    $default  reduce using rule 29 (expressao)


State 62

   29 expressao: expressao . T_VEZES expressao
   30          | expressao . T_DIV expressao
   30          | expressao T_DIV expressao .
   31          | expressao . T_MAIS expressao
   32          | expressao . T_MENOS expressao
   33          | expressao . T_MAIOR expressao
   34          | expressao . T_MENOR expressao
   35          | expressao . T_IGUAL expressao
   36          | expressao . T_E expressao
   37          | expressao . T_OU expressao

    $default  reduce using rule 30 (expressao)


State 63

   29 expressao: expressao . T_VEZES expressao
   30          | expressao . T_DIV expressao
   31          | expressao . T_MAIS expressao
   32          | expressao . T_MENOS expressao
   33          | expressao . T_MAIOR expressao
   33          | expressao T_MAIOR expressao .
   34          | expressao . T_MENOR expressao
   35          | expressao . T_IGUAL expressao
   36          | expressao . T_E expressao
   37          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 46
    T_MENOS  shift, and go to state 47
    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49

    $default  reduce using rule 33 (expressao)


State 64

   29 expressao: expressao . T_VEZES expressao
   30          | expressao . T_DIV expressao
   31          | expressao . T_MAIS expressao
   32          | expressao . T_MENOS expressao
   33          | expressao . T_MAIOR expressao
   34          | expressao . T_MENOR expressao
   34          | expressao T_MENOR expressao .
   35          | expressao . T_IGUAL expressao
   36          | expressao . T_E expressao
   37          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 46
    T_MENOS  shift, and go to state 47
    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49

    $default  reduce using rule 34 (expressao)


State 65

   29 expressao: expressao . T_VEZES expressao
   30          | expressao . T_DIV expressao
   31          | expressao . T_MAIS expressao
   32          | expressao . T_MENOS expressao
   33          | expressao . T_MAIOR expressao
   34          | expressao . T_MENOR expressao
   35          | expressao . T_IGUAL expressao
   35          | expressao T_IGUAL expressao .
   36          | expressao . T_E expressao
   37          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 46
    T_MENOS  shift, and go to state 47
    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51

    $default  reduce using rule 35 (expressao)


State 66

   29 expressao: expressao . T_VEZES expressao
   30          | expressao . T_DIV expressao
   31          | expressao . T_MAIS expressao
   32          | expressao . T_MENOS expressao
   33          | expressao . T_MAIOR expressao
   34          | expressao . T_MENOR expressao
   35          | expressao . T_IGUAL expressao
   36          | expressao . T_E expressao
   36          | expressao T_E expressao .
   37          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 46
    T_MENOS  shift, and go to state 47
    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52

    $default  reduce using rule 36 (expressao)


State 67

   29 expressao: expressao . T_VEZES expressao
   30          | expressao . T_DIV expressao
   31          | expressao . T_MAIS expressao
   32          | expressao . T_MENOS expressao
   33          | expressao . T_MAIOR expressao
   34          | expressao . T_MENOR expressao
   35          | expressao . T_IGUAL expressao
   36          | expressao . T_E expressao
   37          | expressao . T_OU expressao
   37          | expressao T_OU expressao .

    T_MAIS   shift, and go to state 46
    T_MENOS  shift, and go to state 47
    T_VEZES  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52

    $default  reduce using rule 37 (expressao)


State 68

   27 selecao: T_SE expressao T_ENTAO $@4 . lista_comandos T_SENAO $@5 lista_comandos T_FIMSE

    T_LEIA     shift, and go to state 17
    T_ESCREVA  shift, and go to state 18
    T_SE       shift, and go to state 19
    T_ENQTO    shift, and go to state 20
    T_IDENTIF  shift, and go to state 21

    $default  reduce using rule 12 (lista_comandos)

    lista_comandos  go to state 70
    comando         go to state 23
    entrada_saida   go to state 24
    leitura         go to state 25
    escrita         go to state 26
    repeticao       go to state 27
    selecao         go to state 28
    atribuicao      go to state 29


State 69

   24 repeticao: T_ENQTO $@2 expressao T_FACA . $@3 lista_comandos T_FIMENQTO

    $default  reduce using rule 23 ($@3)

    $@3  go to state 71


State 70

   27 selecao: T_SE expressao T_ENTAO $@4 lista_comandos . T_SENAO $@5 lista_comandos T_FIMSE

    T_SENAO  shift, and go to state 72


State 71

   24 repeticao: T_ENQTO $@2 expressao T_FACA $@3 . lista_comandos T_FIMENQTO

    T_LEIA     shift, and go to state 17
    T_ESCREVA  shift, and go to state 18
    T_SE       shift, and go to state 19
    T_ENQTO    shift, and go to state 20
    T_IDENTIF  shift, and go to state 21

    $default  reduce using rule 12 (lista_comandos)

    lista_comandos  go to state 73
    comando         go to state 23
    entrada_saida   go to state 24
    leitura         go to state 25
    escrita         go to state 26
    repeticao       go to state 27
    selecao         go to state 28
    atribuicao      go to state 29


State 72

   27 selecao: T_SE expressao T_ENTAO $@4 lista_comandos T_SENAO . $@5 lista_comandos T_FIMSE

    $default  reduce using rule 26 ($@5)

    $@5  go to state 74


State 73

   24 repeticao: T_ENQTO $@2 expressao T_FACA $@3 lista_comandos . T_FIMENQTO

    T_FIMENQTO  shift, and go to state 75


State 74

   27 selecao: T_SE expressao T_ENTAO $@4 lista_comandos T_SENAO $@5 . lista_comandos T_FIMSE

    T_LEIA     shift, and go to state 17
    T_ESCREVA  shift, and go to state 18
    T_SE       shift, and go to state 19
    T_ENQTO    shift, and go to state 20
    T_IDENTIF  shift, and go to state 21

    $default  reduce using rule 12 (lista_comandos)

    lista_comandos  go to state 76
    comando         go to state 23
    entrada_saida   go to state 24
    leitura         go to state 25
    escrita         go to state 26
    repeticao       go to state 27
    selecao         go to state 28
    atribuicao      go to state 29


State 75

   24 repeticao: T_ENQTO $@2 expressao T_FACA $@3 lista_comandos T_FIMENQTO .

    $default  reduce using rule 24 (repeticao)


State 76

   27 selecao: T_SE expressao T_ENTAO $@4 lista_comandos T_SENAO $@5 lista_comandos . T_FIMSE

    T_FIMSE  shift, and go to state 77


State 77

   27 selecao: T_SE expressao T_ENTAO $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE .

    $default  reduce using rule 27 (selecao)
